# websearch-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  duckduckgo_search.rs  extract_clean_md.rs  globals.rs  main.rs  prefetch.rs  search.rs  searxng_search.rs  startpage_search.rs  ui.rs
websearch/active_tabs/: https___github_com_hheelllloo.md  https___github_com_tweetledee_tweetledee.md  https___www_8thwall_com_chacho_lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll.md
