[package]
name = "websearch-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML processing
readability-js = "0.1"
html-to-markdown-rs = "2.3"

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# String utilities
urlencoding = "2.1"