[package]
name = "websearch-tui"
version = "0.2.0"
edition = "2024"
description = "Lightning-fast terminal web search with Neovim integration"
license = "MIT"
repository = "https://github.com/user/websearch-tui"
keywords = ["tui", "neovim", "search", "terminal", "reader"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# HTTP client with optimizations
reqwest = { version = "0.12", features = [
    "json",
    "gzip",      # Response compression
    "brotli",    # Better compression
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML processing
readability-js = "0.1"
html-to-markdown-rs = "2.3"

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# String utilities
urlencoding = "2.1"
