[package]
name = "websearch-tui"
version = "0.2.0"
edition = "2024"
description = "Lightning-fast terminal web search with Neovim integration"
license = "MIT"
repository = "https://github.com/user/websearch-tui"
keywords = ["tui", "neovim", "search", "terminal", "reader"]
categories = ["command-line-utilities"]

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }

# Content extraction (UPDATED - dom_smoothie instead of readability-js)
dom_smoothie = "0.14.0"
url = "2.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Search API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Config
dotenvy = "0.15"